# cpp-discovery

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
data/curated/: cpp_evidence_ledger.json
data/models/: hemolysis_disruption.pkl
data/raw/: cppsite3_api.json
docs/: HANDOFF.md  architecture.md  benchmark.md  core.md  data_sources.md  database.md  descriptors.md  embeddings.md  evidence.md  generation.md  optimization.md  pipeline.md  poseidon_model_findings.md  prediction.md  ranking.md  redesign.md  scoring.md  similarity.md  visualization.md  webapp.md
src/cpp_ai/: __init__.py  benchmark.py  pipeline.py
src/cpp_ai/core/: __init__.py  exceptions.py  registry.py  schema.py  types.py
src/cpp_ai/database/: __init__.py  base.py  provenance.py  sources.py  store.py  tabular.py
src/cpp_ai/descriptors/: __init__.py  aggregation.py  analysis.py  base.py  composition.py  hydrophobicity.py  motifs.py  physicochemical.py  qsar.py
src/cpp_ai/embeddings/: __init__.py  base.py  cache.py  esm2.py  mock.py  prott5.py  service.py
src/cpp_ai/evidence/: __init__.py  sar.py  schema.py  seed.py  store.py
src/cpp_ai/generation/: __init__.py  constraints.py  generator.py  substitutions.py
src/cpp_ai/optimization/: __init__.py  nsga2.py  objectives.py  pareto.py
src/cpp_ai/prediction/: __init__.py  base.py  classifier.py  evaluation.py  features.py  models.py  synthetic.py  validation.py
src/cpp_ai/ranking/: __init__.py  candidate.py  engine.py  explain.py
src/cpp_ai/scoring/: __init__.py  blocks.py  cargo.py  context.py  cytotoxicity.py  disruption.py  evidence.py  insertion.py  physchem.py  positional.py  safety.py  surface.py
src/cpp_ai/screening/: __init__.py  candidate.py  index.py  library.py  modification.py
src/cpp_ai/similarity/: __init__.py  composite.py  engine.py  features.py  metrics.py
src/cpp_ai/visualization/: __init__.py  plots.py  reduce.py
src/cpp_ai/webapp/: __init__.py  app.py
tests/: test_benchmark.py  test_pipeline.py  test_validation.py
tests/core/: test_registry.py  test_schema.py  test_types.py
tests/database/: test_importers.py  test_provenance.py  test_store.py
tests/descriptors/: test_analysis.py  test_base.py  test_composition_aggregation.py  test_motifs.py  test_physicochemical.py  test_qsar.py
tests/embeddings/: test_base_and_mock.py  test_cache.py  test_esm2_real.py  test_service.py
tests/evidence/: test_sar.py  test_schema.py  test_store_and_seed.py
tests/generation/: test_constraints.py  test_generator.py  test_substitutions.py
tests/optimization/: test_nsga2.py  test_objectives.py  test_pareto.py
tests/prediction/: test_base_models_synthetic.py  test_classifier.py  test_evaluation.py  test_features.py  test_validation.py
tests/ranking/: test_candidate.py  test_engine.py  test_explain.py
tests/scoring/: test_cargo.py  test_context.py  test_disruption.py  test_evidence.py  test_insertion.py  test_lysis.py  test_physchem.py  test_positional.py  test_safety.py  test_surface.py
tests/screening/: test_candidate.py  test_index.py  test_library.py  test_modification.py
tests/similarity/: test_composite.py  test_engine.py  test_metrics.py
tests/visualization/: test_plots.py  test_reduce.py
